Update demo to avoid globals
Since we can get the original image from event.target, we don't need to
store it in a variable ahead of time.

--- a/demo.html
+++ b/demo.html
@@ -9,11 +9,9 @@
         <button id="button" role="button">Button</button>
         <script src="imagecrop.js"></script>
         <script>
-            var image = document.querySelector('.crop-me');
-
-            image.addEventListener('load', function () {
+            document.querySelector('.crop-me').addEventListener('load', function (e) {
                 var cropped = new ImageCrop({
-                    image: image,
+                    image: e.target,
                     opacity: 0.6
                 });
                 cropped.init();
