--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,8 @@
             document.querySelector('.crop-me').addEventListener('load', function (e) {
                 var cropped = new ImageCrop({
                     image: e.target,
-                    opacity: 0.6
+                    opacity: 0.6,
+                    ratio: 1
                 });
                 cropped.init();
 
