Allow fixing a height and width

--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,8 @@
                 var cropped = new ImageCrop({
                     image: e.target,
                     opacity: 0.6,
-                    ratio: 1.618
+                    outputWidth: 1920,
+                    outputHeight: 1080
                 });
                 cropped.init();
 
