--- a/demo.html
+++ b/demo.html
@@ -9,9 +9,9 @@
         <button id="button" role="button">Button</button>
         <script src="imagecrop.js"></script>
         <script>
-            document.querySelector('.crop-me').addEventListener('load', function (e) {
+            var createImageCrop = function (image) {
                 var cropped = new ImageCrop({
-                    image: e.target,
+                    image: image,
                     opacity: 0.6,
                     outputWidth: 1920,
                     outputHeight: 1080
@@ -21,7 +21,17 @@
                 document.querySelector('#button').addEventListener('click', function () {
                     window.open(cropped.save());
                 });
-            });
+            };
+
+            var image = document.querySelector('.crop-me');
+
+            if (image.complete) {
+                createImageCrop(image);
+            } else {
+                image.addEventListener('load', function () {
+                    createImageCrop(image);
+                });
+            }
         </script>
     </body>
 </html>
