--- a/demo.html
+++ b/demo.html
@@ -13,6 +13,7 @@
             var createImageCrop = function (image) {
                 var cropped = new ImageCrop({
                     image: image,
+                    imageType: 'image/jpeg',
                     opacity: 0.6,
                     outputWidth: 1920,
                     outputHeight: 1080
